tests/sema/fail/v21_fail_extern_return_bool.ep
# COMPILE_FAIL: extern Bad has unsupported ABI return type bool
extern "demo.dll" fun Bad(): bool
fun main(): void {}
